apps/WebTs/overlays/prod/HTTPRoutes/webts-secure-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webts-secure-route
  namespace: webts
spec:
  parentRefs:
    - name: scdb-gateway
      namespace: default
      sectionName: https-prod-webts
  hostnames:
    - webts.prod.home.dblanchet.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webts-web-svc
          port: 8080
